--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "build:registry": "cd ./registry/ && npm run build",
         "postinstall": "npm run install-all"
     },
-    "author": "Vladlen Fedosov",
+    "author": "",
     "license": "Apache-2.0",
     "engines": {
         "node": ">= 14.0.0",
