--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ nav:
       - Introduction: docs/routing/introduction.md
       - Route configuration: docs/routing/route_configuration_options.md
       - Route matching patterns: docs/routing/route_matching_patterns.md
+      - Route transition and animation: docs/routing/route_transition_and_animation.md
       - i18n & trailing slash: docs/routing/localization_and_trailing_slash.md
       - Special routes: docs/routing/special_routes.md
     - Advanced features:
