feat: add configuration that allows to ignore access log for defined urls

--- a/ilc/config/custom-environment-variables.json5
+++ b/ilc/config/custom-environment-variables.json5
@@ -8,4 +8,9 @@
         customClientJsWrapper: 'NR_CUSTOM_CLIENT_JS_WRAPPER',
     },
     overrideConfigTrustedOrigins: 'OVERRIDE_CONFIG_TRUSTED_ORIGINS',
+    logger: {
+        accessLog: {
+            ignoreUrls: 'LOGGER_ACCESSLOG_IGNOREURLS'
+        }
+    }
 }
