--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -13,4 +13,9 @@
         customClientJsWrapper: null,
     },
     overrideConfigTrustedOrigins: null,
+    logger: {
+        accessLog: {
+            ignoreUrls: []
+        }
+    }
 }
