docs: fully revised installation guide doc. Renamed the doc, updated links to the doc in the config

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
     - Contributing: CONTRIBUTING.md
   - Demo website: http://ilc-demo.namecheap.technology
   - Documentation:
-    - Installation: docs/installation_guide.md
+    - Overview: docs/overview.md
     - Micro-frontend Types: docs/microfrontend-types.md
     - App deployments with ILC: docs/stepbystep/index.md
     - ILC to App interface: docs/ilc_app_interface.md
