chore: change config format due to env var is string

--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -15,7 +15,7 @@
     overrideConfigTrustedOrigins: null,
     logger: {
         accessLog: {
-            ignoreUrls: []
+            ignoreUrls: ''
         }
     }
 }
