docs: fully revised the develop in production doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ nav:
     - Animation during reroute: docs/animation_during_reroute.md
     - Global error handling: docs/global_errors_handling.md
     - Internationalization: docs/i18n.md
-    - Develop at Production: docs/develop_at_production.md
+    - Develop in production: docs/develop_in_production.md
     - Compatibility with legacy UMD bundles: docs/umd_bundles_compatibility.md
     - Global API: docs/global_api.md
     - ILC transition hooks: docs/transition_hooks.md
