--- a/registry/package.json
+++ b/registry/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "tsc": "tsc",
         "compile": "tsc --incremental",
-        "dev": "nodemon -e ts,json5 --exec \"tsc --incremental && npm run start\"",
+        "dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && npm run start\"",
         "build": "npm run compile && cd ./client && npm run build",
         "start": "node -r source-map-support/register ./build/server/index.js",
         "start-docker": "npm run migrate && npm start",
