fix: correct docker image for NodeJS16 and registry.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "author": "",
     "license": "Apache-2.0",
     "engines": {
-        "node": ">= 14.0.0",
+        "node": ">=16 <17",
         "npm": ">= 6.0.0"
     },
     "dependencies": {},
