--- a/ilc/package.json
+++ b/ilc/package.json
@@ -84,7 +84,7 @@
     "wrapper-webpack-plugin": "^2.1.0"
   },
   "engines": {
-    "node": ">16 <17"
+    "node": ">=16 <17"
   },
   "engineStrict": true
 }
