--- a/registry/package.json
+++ b/registry/package.json
@@ -82,7 +82,7 @@
         "uuid": "^8.3.2"
     },
     "engines": {
-        "node": ">16 <17"
+        "node": ">=16 <17"
     },
     "engineStrict": true
 }
