--- a/ilc/package.json
+++ b/ilc/package.json
@@ -5,9 +5,9 @@
   "main": "server/index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha",
-    "test:ci": "npm run test -- --forbid-only",
+    "test:ci": "npm run test -- --forbid-only --exit",
     "test:watch": "npm run test -- --watch",
-    "test:coverage": "cross-env NODE_ENV=test nyc mocha",
+    "test:coverage": "cross-env NODE_ENV=test nyc mocha --exit",
     "test:client": "npm run build:systemjs && cross-env NODE_ENV=test karma start",
     "test:client:watch": "npm run test:client -- --single-run=false --auto-watch=true",
     "start": "node --max-http-header-size 30000 server/index.js",
