--- a/ilc/package.json
+++ b/ilc/package.json
@@ -75,6 +75,7 @@
     "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
     "raw-loader": "^3.1.0",
+    "rimraf": "^3.0.2",
     "sinon": "^8.1.1",
     "supertest": "^4.0.2",
     "webpack": "^4.44.1",
