--- a/ilc/package.json
+++ b/ilc/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@mapbox/scroll-restorer": "1.0.0",
     "@namecheap/error-extender": "^1.2.0",
+    "@newrelic/native-metrics": "^8.0.0",
     "agentkeepalive": "^4.2.1",
     "axios": "^0.21.4",
     "cidr-matcher": "^2.1.1",
