--- a/registry/package.json
+++ b/registry/package.json
@@ -35,7 +35,7 @@
         "@types/lodash": "^4.14.181",
         "@types/mocha": "^9.1.0",
         "@types/newrelic": "^7.0.3",
-        "@types/node": "^14.18.12",
+        "@types/node": "^16.11.27",
         "@types/passport": "^1.0.7",
         "@types/passport-http-bearer": "^1.0.37",
         "@types/passport-local": "^1.0.34",
@@ -57,6 +57,8 @@
     },
     "dependencies": {
         "@namecheap/error-extender": "^1.2.0",
+        "@newrelic/native-metrics": "^8.0.0",
+        "@vscode/sqlite3": "^5.0.8",
         "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
@@ -77,7 +79,6 @@
         "query-string": "^7.1.1",
         "serve-static": "^1.15.0",
         "source-map-support": "^0.5.21",
-        "@vscode/sqlite3": "^5.0.8",
         "url-join": "^4.0.1",
         "uuid": "^8.3.2"
     },
