fix: newrelic native metrics were not installed in previous commit because dockerfile uses --ignore-scripts during npm ci command, which does not build native metrics plugin.

--- a/ilc/Dockerfile
+++ b/ilc/Dockerfile
@@ -9,6 +9,7 @@ WORKDIR /codebase
 
 COPY package-lock.json package.json /codebase/
 RUN npm ci --no-package-lock --ignore-scripts
+RUN npm rebuild @newrelic/native-metrics
 
 COPY ./ /codebase
 
