chore: remove unused start task

--- a/registry/client/package.json
+++ b/registry/client/package.json
@@ -5,9 +5,8 @@
     "description": "",
     "main": "index.html",
     "scripts": {
-        "start": "webpack-dev-server --progress --color --hot --watch --mode development",
-        "build": "cross-env NODE_ENV=production webpack-cli --mode production --color --hide-modules true",
-        "build:watch": "cross-env NODE_ENV=development webpack-cli --color --hide-modules true --watch --mode development"
+        "build": "cross-env NODE_ENV=production webpack-cli --mode production --color",
+        "build:watch": "cross-env NODE_ENV=development webpack-cli --color --watch --mode development"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.10",
@@ -30,8 +29,7 @@
         "wait-on": "^3.2.0",
         "webpack": "^4.42.1",
         "webpack-bundle-analyzer": "^4.5.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^4.9.0"
+        "webpack-cli": "^4.9.2"
     },
     "dependencies": {
         "@babel/polyfill": "^7.0.0",
