fix(TransactionManager): Fix broken tests

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -8,7 +8,7 @@
     "test:ci": "npm run test -- --forbid-only --exit",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha --exit",
-    "test:client": "npm run build:systemjs && cross-env NODE_ENV=test karma start",
+    "test:client": "npm run build:systemjs && cross-env NODE_ENV=test karma start --debug",
     "test:client:watch": "npm run test:client -- --single-run=false --auto-watch=true",
     "start": "node --max-http-header-size 30000 server/index.js",
     "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/index.js",
@@ -41,7 +41,7 @@
     "lzutf8": "^0.6.1",
     "newrelic": "^8.9.1",
     "serve-static": "^1.15.0",
-    "single-spa": "5.9.4",
+    "single-spa": "5.6.0",
     "systemjs": "6.10.1",
     "systemjs-css-extra": "^1.0.2",
     "tailorx": "^7.0.1",
