--- a/ilc/package.json
+++ b/ilc/package.json
@@ -56,6 +56,9 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.7",
+    "@types/chai": "4.3.1",
+    "@types/mocha": "9.1.1",
+    "@types/sinon": "10.0.11",
     "babel-loader": "^8.2.4",
     "babel-plugin-transform-async-to-promises": "^0.8.18",
     "chai": "^4.3.6",
