feat: add ability to customize static error page.
Now customer can specify its own error page if default is not suitable. Also default error page now is a valid HTML and more pretty than just text.

--- a/ilc/config/custom-environment-variables.json5
+++ b/ilc/config/custom-environment-variables.json5
@@ -1,5 +1,8 @@
 {
     cdnUrl: 'CDN_URL',
+    staticError: {
+        disasterFileContentPath: 'ILC_DISASTER_FILE_CONTENT_PATH'
+    },
     registry: {
         address: 'REGISTRY_ADDR',
     },
