--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -2,6 +2,9 @@
     productionMode: true,
     port: 8233,
     cdnUrl: null,
+    staticError: {
+        disasterFileContentPath: null
+    },
     registry: {
         address: 'http://127.0.0.1:4001'
     },
