--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Docker ILC auth
-      run: echo "${{ secrets.DOCKER_HUB_TOKEN_NC }}" | docker login --username namecheaprnd --password-stdin
+      run: echo "${{ secrets.DOCKER_HUB_BROTHERS_TOKEN }}" | docker login --username brothers --password-stdin
 
     - name: Build the Docker image
       uses: docker/build-push-action@v2
@@ -89,7 +89,7 @@ jobs:
           buildkitd-flags: --debug
 
       - name: Docker registry auth
-        run: echo "${{ secrets.DOCKER_HUB_TOKEN_NC }}" | docker login --username namecheaprnd --password-stdin
+        run: echo "${{ secrets.DOCKER_HUB_BROTHERS_TOKEN }}" | docker login --username brothers --password-stdin
 
       - name: Build the Docker image
         uses: docker/build-push-action@v3
