--- a/registry/package.json
+++ b/registry/package.json
@@ -58,12 +58,14 @@
     "dependencies": {
         "@namecheap/error-extender": "^1.2.0",
         "@newrelic/native-metrics": "^8.0.0",
+        "@types/escape-html": "^1.0.2",
         "@vscode/sqlite3": "^5.0.8",
         "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
         "config": "^3.3.7",
         "connect-session-knex": "^2.1.1",
+        "escape-html": "^1.0.3",
         "express": "^4.17.3",
         "express-session": "^1.17.2",
         "http-shutdown": "^1.2.2",
