chore: refactor structure

--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -21,5 +21,11 @@
         accessLog: {
             ignoreUrls: ''
         }
+    },
+    static: {
+        internalUrl: '/_ilc/',
+    },
+    healthCheck: {
+        url: '/ping',
     }
 }
