--- a/registry/package.json
+++ b/registry/package.json
@@ -28,6 +28,7 @@
         "@types/bcrypt": "^3.0.0",
         "@types/chai": "4.3.0",
         "@types/config": "0.0.41",
+        "@types/deep-equal": "^1.0.1",
         "@types/express": "4.17.13",
         "@types/express-serve-static-core": "4.17.28",
         "@types/express-session": "^1.17.4",
@@ -65,6 +66,7 @@
         "body-parser": "^1.20.0",
         "config": "^3.3.7",
         "connect-session-knex": "^2.1.1",
+        "deep-equal": "^2.1.0",
         "escape-html": "^1.0.3",
         "express": "^4.17.3",
         "express-session": "^1.17.2",
