--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     },
     "devDependencies": {
         "concurrently": "^7.1.0",
-        "prettier": "^2.7.1",
-        "husky": "^8.0.0"
+        "husky": "^8.0.0",
+        "prettier": "^2.7.1"
+    },
+    "dependencies": {
+        "mocha": "^10.2.0"
     }
 }
