feat: add ability to specify healthcheck URL for ILC to be able flexible host it in different environments.

--- a/ilc/config/custom-environment-variables.json5
+++ b/ilc/config/custom-environment-variables.json5
@@ -16,5 +16,8 @@
         accessLog: {
             ignoreUrls: 'LOGGER_ACCESSLOG_IGNOREURLS'
         }
+    },
+    healthCheck: {
+        url: 'ILC_HEALTH_CHECK_URL'
     }
 }
