chore: configure client protocol

--- a/ilc/config/custom-environment-variables.json5
+++ b/ilc/config/custom-environment-variables.json5
@@ -25,5 +25,8 @@
     },
     healthCheck: {
         url: 'ILC_HEALTH_CHECK_URL'
+    },
+    client: {
+        protocol: 'ILC_CLIENT_PROTOCOL',
     }
 }
