--- a/registry/.mocharc.json
+++ b/registry/.mocharc.json
@@ -2,6 +2,6 @@
     "spec": "**/*.spec.ts",
     "require": "ts-node/register",
     "timeout": 5000,
-    "exclude": "node_modules/**/*",
+    "exclude": "**/node_modules/**",
     "exit": true
 }
