--- a/registry/.nycrc.json
+++ b/registry/.nycrc.json
@@ -1,13 +1,10 @@
 {
+    "extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
-    "reporter": "text",
-    "check-coverage": true,
+    "reporter": ["html", "text", "json-summary"],
+    "check-coverage": false,
+    "report-dir": ".nyc_output/coverage",
     "lines": 90,
     "per-file": true,
-    "exclude": [
-        "**/*.spec.ts",
-        "config",
-        "build",
-        "node_modules"
-    ]
+    "exclude": ["**/*.spec.ts", "config", "build", "node_modules", "client/dist"]
 }
