--- a/ilc/package.json
+++ b/ilc/package.json
@@ -59,6 +59,7 @@
     "@types/mocha": "9.1.1",
     "@types/sinon": "10.0.11",
     "babel-loader": "^8.2.4",
+    "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-transform-async-to-promises": "^0.8.18",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
