feat(registry): add structure logs support
Add ilc-plugins-sdk partial support

--- a/registry/package.json
+++ b/registry/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "tsc": "tsc",
         "compile": "tsc --incremental",
-        "dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && npm run start\"",
+        "dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && npm run start | pino-pretty || exit 1\"",
         "build": "npm run compile && cd ./client && npm run build",
         "start": "node -r source-map-support/register ./build/server/index.js",
         "start-docker": "npm run migrate && npm start",
@@ -16,8 +16,8 @@
         "migrate:rollback": "knex --knexfile config/knexfile.ts migrate:rollback",
         "seed": "knex --knexfile config/knexfile.ts seed:run",
         "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
-        "test": "cross-env NODE_ENV=test nyc mocha",
-        "test:ci": "npm run migrate && npm run test -- --forbid-only",
+        "test": "cross-env NODE_ENV=test mocha",
+        "test:ci": "npm run migrate && cross-env NODE_ENV=test nyc mocha --forbid-only",
         "test:coverage": "cross-env NODE_ENV=test nyc mocha",
         "postinstall": "npm run migrate && npm run seed",
         "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node ./build/server/runnerAssetsDiscovery.js"
@@ -51,6 +51,7 @@
         "nock": "^13.2.4",
         "nodemon": "^2.0.15",
         "nyc": "^15.1.0",
+        "pino-pretty": "^10.2.0",
         "sinon": "^13.0.1",
         "supertest": "6.2.2",
         "timekeeper": "^2.2.0",
@@ -72,6 +73,7 @@
         "express": "^4.17.3",
         "express-session": "^1.17.2",
         "http-shutdown": "^1.2.2",
+        "ilc-plugins-sdk": "^1.7.0",
         "is-valid-domain": "0.1.6",
         "joi": "^17.6.0",
         "knex": "^1.0.5",
