--- a/registry/package.json
+++ b/registry/package.json
@@ -16,9 +16,10 @@
         "migrate:rollback": "knex --knexfile config/knexfile.ts migrate:rollback",
         "seed": "knex --knexfile config/knexfile.ts seed:run",
         "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
-        "test": "cross-env NODE_ENV=test mocha",
-        "test:ci": "npm run migrate && cross-env NODE_ENV=test nyc mocha --forbid-only",
         "test:coverage": "cross-env NODE_ENV=test nyc mocha",
+        "reset": "rimraf server/dbfiles/*.sqlite && npm run migrate",
+        "test": "npm run reset && cross-env NODE_ENV=test mocha",
+        "test:ci": "npm run reset && cross-env NODE_ENV=test nyc mocha --forbid-only",
         "postinstall": "npm run migrate && npm run seed",
         "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node ./build/server/runnerAssetsDiscovery.js"
     },
@@ -52,6 +53,7 @@
         "nodemon": "^2.0.15",
         "nyc": "^15.1.0",
         "pino-pretty": "^10.2.0",
+        "rimraf": "^5.0.1",
         "sinon": "^13.0.1",
         "supertest": "6.2.2",
         "timekeeper": "^2.2.0",
@@ -79,6 +81,7 @@
         "knex": "^1.0.5",
         "lodash": "^4.17.21",
         "newrelic": "^8.9.1",
+        "node-html-parser": "^6.1.6",
         "openid-client": "^5.1.4",
         "passport": "^0.5.2",
         "passport-http-bearer": "^1.0.1",
